<resources>
    <string name="app_name">PatikaWeekFive</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_title">Post Title:</string>
    <string name="post_body">Post Body:</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="user_id">User Id</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
</resources>