<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="dataHolder"
            type="com.burhanyaprak.patikaweekfive.data.model.UserDTO" />

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp">

            <TextView
                android:id="@+id/textViewUserId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/user_id"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:textStyle="bold" />


            <TextView
                android:id="@+id/textViewUserIdValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@{dataHolder.id.toString()}"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textViewUserId"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="1" />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/name"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewUserId"
                tools:textStyle="bold" />


            <TextView
                android:id="@+id/textViewNameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{dataHolder.name}"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textViewUserIdValue"
                app:layout_constraintTop_toBottomOf="@+id/textViewUserIdValue"
                tools:text="Burhan" />

            <TextView
                android:id="@+id/textViewUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/username"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewName"
                tools:textStyle="bold" />


            <TextView
                android:id="@+id/textViewUserNameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{dataHolder.username}"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textViewNameValue"
                app:layout_constraintTop_toBottomOf="@+id/textViewNameValue"
                tools:text="Burhan Y." />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/email"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewUserName"
                tools:textStyle="bold" />

            <TextView
                android:id="@+id/textViewEmailValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{dataHolder.email}"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textViewUserNameValue"
                app:layout_constraintTop_toBottomOf="@+id/textViewUserNameValue"
                tools:text="Burhanyaprak@outlook.com" />

            <TextView
                android:id="@+id/textViewWebsite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:text="@string/website"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
                tools:textStyle="bold" />

            <TextView
                android:id="@+id/textViewWebsiteValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:text="@{dataHolder.website}"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewWebsite"
                app:layout_constraintTop_toBottomOf="@+id/textViewEmailValue"
                tools:text="burhanyaprak.com" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
